Rollout/blue-green/service-active.yaml
kind: Service
apiVersion: v1
metadata:
  name: active-service
spec:
  selector:
    app: bluegreen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
