Rollout/blue-green/service-preview.yaml
kind: Service
apiVersion: v1
metadata:
  name: preview-service
spec:
  selector:
    app: bluegreen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
