Rollout/blue-green/ingress-blue-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  labels:
    env: dev
    app: blue-green-test
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-01925fe3fdb467412,subnet-0183b83ada5e17406
    alb.ingress.kubernetes.io/security-groups: sg-05da8f99ad01efcdb
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host:
      http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: preview-service
                port:
                  number: 80
          # - path: /green
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: preview-service
          #       port:
          #         number: 80
          - path: /
            pathType: Exact
            backend:
              service:
                name: active-service
                port:
                  number: 80
